# openai-proxy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SKILL.md  docker-compose.yaml  hooks.example.toml  opencode.json
.claude/: settings.local.json
.kbd-orchestrator/: current-waypoint.json  current-waypoint.md
.kbd-orchestrator/changes/change-001/: change.md
.kbd-orchestrator/changes/change-002/: change.md
.kbd-orchestrator/changes/change-003/: change.md
.kbd-orchestrator/changes/change-004/: change.md
.kbd-orchestrator/changes/change-005/: change.md
.kbd-orchestrator/changes/change-006/: change.md
.kbd-orchestrator/changes/change-007/: change.md
.kbd-orchestrator/changes/change-008/: change.md
.kbd-orchestrator/phases/mcp-skill-packaging/: assessment.md  execution.md  plan.md  progress.json
.kbd-orchestrator/phases/protocol-extensibility-assessment/: assessment.md  execution.md  plan.md  progress.json  reflection.md
docs/: a2a-integration.md  a2a.md  acp.md  ag-ui.md  config.md  hooks.md  memory.md  opencode-setup.md  protocol-extensibility-assessment.md
plugin/: .npmignore  package.json  tsconfig.json
plugin/src/: auth.ts  codex-login.ts  config.ts  index.ts
references/: auth.md
scripts/: start-mcp.sh  start.sh
src/: a2a.rs  acp.rs  agui.rs  codex.rs  config.rs  error.rs  hooks.rs  lib.rs  main.rs  mcp.rs  mcp_client.rs  memory.rs  models.rs  openai.rs  proxy.rs  skills.rs
src/cli/: config.rs  mod.rs  setup.rs  skills.rs
tests/: integration.rs
(+9 files in other folders)
