[package]
name = "openai-proxy"
version = "0.1.0"
edition = "2024"

[features]
memory = ["dep:surrealdb", "dep:chrono"]

[[bin]]
name = "openai-proxy"
path = "src/main.rs"

[lib]
name = "openai_proxy_lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
dotenvy = "0.15"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0"
agent-client-protocol = "0.11"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
thiserror = "2"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
surrealdb = { version = "3.0.5", features = ["kv-rocksdb"], optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
axum-test = "20"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
